--- a/Backend/SimpleService/compose.yaml
+++ b/Backend/SimpleService/compose.yaml
@@ -1,7 +1,6 @@
 version: "3.8"
 
 services:
-
   # Simple microservice
 
   #################################
@@ -11,7 +10,7 @@ services:
     build: ./Account
     image: spm/account:1.0
     restart: always
-    ports: [ 5001:5000 ]
+    ports: [5001:5000]
     depends_on:
       - account_db
     environment:
@@ -26,10 +25,40 @@ services:
   account_db:
     image: mysql:latest
     restart: always
-    ports: [ 3301:3306 ]
+    ports: [3301:3306]
     environment:
-      MYSQL_ROOT_PASSWORD: root 
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: account
     volumes:
       - ./Account/db/account.sql:/docker-entrypoint-initdb.d/init.sql # Mount the file
-      - ./Account/employee.csv:/var/lib/mysql-files/employee.csv  # Mount the file
+      - ./Account/employee.csv:/var/lib/mysql-files/employee.csv # Mount the file
+
+  #################################
+  # Schedule: The Schedule microservice
+  #################################
+  schedule:
+    build: ./Schedule
+    image: spm/schedule:1.0
+    restart: always
+    ports: [5002:5000]
+    depends_on:
+      - schedule_db
+    environment:
+      DB_HOST: schedule_db
+      DB_USER: root
+      DB_PASSWORD: root
+      DB_NAME: db
+      DB_PORT: 3306
+  #################################
+  # Schedule SQL Database
+  #################################
+  schedule_db:
+    image: mysql:latest
+    restart: always
+    ports: [3302:3306]
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: db
+    volumes:
+      - ./Schedule/db/schedule.sql:/docker-entrypoint-initdb.d/init.sql # Mount the file
+      - ./Schedule/schedule.csv:/var/lib/mysql-files/schedule.csv # Mount the file
